<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_shadow_end_color">

    <RelativeLayout
        android:id="@+id/B_atas"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="40dp"
                android:text="@string/produk" />

        </androidx.cardview.widget.CardView>
    </RelativeLayout>



        <androidx.cardview.widget.CardView
            android:id="@+id/ac_menu"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="5dp"
            tools:layout_below="@id/B_atas">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/Dft_produk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/daftar_produk"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/jumlah_produk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_below="@+id/Dft_produk"
                    android:text="@string/jumlah_produk"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="#000000"/>

                <Button
                    android:id="@+id/tambah_produk"
                    android:layout_width="149dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:background="@drawable/button"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/tambah_produk"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/garis"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_below="@id/jumlah_produk"
                    android:layout_marginTop="10dp"
                    android:background="#bbb"/>

                <Button
                    android:id="@+id/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/garis"
                    android:text="@string/filter" />

                <SearchView
                    android:layout_width="270dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"

                    android:layout_below="@+id/garis">

                </SearchView>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginTop="5dp"
        android:layout_below="@id/ac_menu"/>


    <!--    <android.support.v7.widget.RecyclerView-->
<!--        android:id="@+id/recycler_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/menu_bawah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu_bawah"/>

</RelativeLayout>