<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".fragments.ProdukFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <TextView
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:id="@+id/toolbar_title"
                android:layout_gravity="center"
                android:text="Produk"
                android:textColor="@color/colorPrimaryWhite"
                android:textSize="22dp"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </androidx.appcompat.widget.Toolbar>


            <RelativeLayout
                android:id="@+id/ac"
                android:layout_below="@id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    android:id="@+id/Dft_produk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/daftar_produk"
                    android:textSize="18sp"
                    android:fontFamily="@font/roboto"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/jumlah_produk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_below="@+id/Dft_produk"
                    android:text="@string/jumlah_produk"
                    android:textSize="16sp"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="#000000"/>

                <Button
                    android:id="@+id/tambah_produk"
                    android:layout_width="149dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="5dp"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:background="@drawable/button"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:text="@string/tambah_produk"
                    android:textColor="#ffffff"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/garis"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_below="@id/jumlah_produk"
                    android:layout_marginTop="10dp"
                    android:background="#bbb"/>

                <Button
                    android:id="@+id/filter"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/garis"
                    android:text="@string/filter" />

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="230dp"
                    android:layout_weight="1"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="5dp"
                    android:layout_below="@+id/garis"
                    android:background="#EFEFEF"
                   />

            </RelativeLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_below="@id/ac"
            android:id="@+id/Precview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </RelativeLayout>
    </ScrollView>
</FrameLayout>