<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">

            <!-- TextView Image-Produk -->
            <ImageView
                android:src="@drawable/produk"
                android:id="@+id/ImgProduk"
                android:layout_width="75dp"
                android:layout_height="100dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"/>

            <!-- TextView Nama-Produk -->
            <TextView
                android:id="@+id/TVNamaProduk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_toRightOf="@+id/ImgProduk"
                android:text="@string/nama_produk"
                android:textSize="18sp"
                android:fontFamily="@font/roboto"
                android:textColor="#000000"/>

            <!-- TextView Harga-Produk -->

        <TextView
            android:id="@+id/rp"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_below="@id/TVNamaProduk"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/ImgProduk"
            android:fontFamily="@font/roboto_light"
            android:text="Rp. "
            android:textColor="#000000"
            android:textSize="14sp" />

            <TextView
                android:id="@+id/TVHargaProduk"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_below="@id/TVNamaProduk"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_alignLeft="@+id/rp"
                android:layout_toRightOf="@+id/ImgProduk"
                android:fontFamily="@font/roboto_light"
                android:text="@string/harga"
                android:textColor="#000000"
                android:textSize="14sp" />

            <Button
                android:id="@+id/lihat_produk"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#ffffff"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/ImgProduk"
                android:layout_below="@id/TVHargaProduk"
                android:fontFamily="@font/roboto_bold"
                android:text="Ubah Produk"
                android:textSize="15dp"/>

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_alignParentEnd="true"
                android:text="@string/stok_habis" />

            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_hapus"
                android:layout_below="@id/TVHargaProduk"
                android:src="@drawable/ic_hapus"/>


        </RelativeLayout>

</androidx.cardview.widget.CardView>